public/css/main.css
/* Reset */

html, body, section, article,
h1, h2, h3, p, strong, em, a, ul, main, nav {
    margin: 0;
    border: 0;
    padding: 0;
    outline: 0;
    box-sizing: border-box;
    text-decoration: inherit;
    text-align: inherit;
    color: inherit;
    background: transparent;
    font-family: 'Josefin Sans', sans-serif;
    font-size: 16px;
    font-weight: normal;
}

/* Layout */

body {
    overflow-x: hidden;
}

body.ReactModal__Body--open {
    overflow-y: hidden;
}

strong {
    font-size: inherit;
    font-weight: 700;
}

section {
    min-height: calc(100vh - 75px);
    width: 100vw;
    padding-top: 70px;
    display: flex;
    align-items: center;
    justify-content: center;
    box-sizing: content-box;
    background-color: rgba(255, 255, 255, 1);
}

h1 {
    font-size: 80px;
}

h2 {
    font-size: 50px;
    text-align: center;
}

h3 {
    font-size: 25px;
    text-align: center;
}

a {
    cursor: pointer;
}

/* Navbars */
.main-nav {
    top: 0;
    display: flex;
    position: fixed;
    width: 100vw;
    height: 70px;
    background-color: white;
    z-index: 10;
    align-items: center;
    justify-content: space-between;
    padding: 10px 30px;
}

.main-nav a:hover {
    color: grey;
    transition: color 0.25s linear;
}

.logo {
    font-size: 30px;
}

.nav-buttons i {
    margin: 15px;
}

.point-nav {
    height: 100vh;
    display: flex;
    position: fixed;
    z-index: 10;
    left: 75px;
    align-items: center;
}

.point-nav-buttons {
    width: 2px;
    height: 300px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    overflow-x: visible;
    flex-direction: column;
    color: black;
    transition: all 0.2s linear;
}

.point-nav-buttons-background {
    background-color: black;
    width: 2px;
    height: 290px;
}

.point-nav-buttons a {
    background: white;
    height: 50px;
    width: 50px;
    display: flex;
    align-items: center;
    justify-content: center;
    border-radius: 25px;
    border: 2px solid black;
    position: relative;
    margin-left: -5px;
}

.point-nav-buttons a:hover, .point-nav-buttons a.active {
    background-color: black;
    transition: background-color 0.5s linear;
    color: white;
}

.point-nav-buttons p {
    visibility: hidden;
    left: 15px;
    bottom: 15px;
    opacity: 0;
    position: absolute;
    z-index: -1;
    transition: visibility 0s linear 0.25s, opacity 0.5s linear, left 0.5s linear;
}

.point-nav-buttons a:hover p {
    visibility: visible;
    opacity: 1;
    left: 60px;
    color: black;
    transition: visibility 0s linear 0.25s, opacity 0.5s linear, left 0.5s linear;
}

/* Main Banner */

#main-banner {
    flex-direction: column;
    justify-content: space-around;
    background-color: rgba(255, 255, 255, 0.2);
}

.main-banner-overlay {
    opacity: 50%;
    background-size: cover;
    background-image: url('../assets/images/lighthouse.png');
    width: 100%;
    height: calc(100% + 75px);
    position: fixed;
    top: 0;
    right: 0;
    z-index: -2;
}

.down-arrow {
    position: relative;
    cursor: pointer;
    width: 54px;
    height: 54px;
}

.down-arrow a {
    position: absolute;
    top: 0px;
    transition: top 0.10s linear;
}

.down-arrow a:hover {
    top: 10px;
    transition: top 0.10s linear;
}

/* Experience */

.experience {
    width: 80vw;
    max-width: 800px;
}

.experience-circles {
    display: flex;
    justify-content: space-around;
}

.circle {
    height: 15vw;
    width: 15vw;
    max-height: 150px;
    max-width: 150px;
    min-height: 125px;
    min-width: 125px;
    border-radius: 15vw;
    overflow: hidden;
    background-size: cover;
    border: 5px solid grey;
}

.circle.active {
    border: 5px solid rgb(0, 102, 153);
}

.circle:not(.active):hover {
    cursor: pointer;
}

.circle div {
    width: 100%;
    height: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    color: grey;
}

.circle.active div {
    font-weight: 700;
    color: rgb(0, 102, 153);
}

.circle:not(.active):hover div {
    transition: background-color 0.5s linear;
    background-color: rgb(220, 220, 220);
}

.experience-content {
    margin-top: 50px;
    padding: 45px;
    box-sizing: border-box;
    border-top: 1px solid black;
    height: 45vh;
    overflow-y: scroll;
    white-space: pre-wrap;
    font: inherit;
    font-size: 20px;
}

.icons img {
    width: 50px;
    height: 50px;
    margin: 15px;
}

.modal-content {
    width: 800px;
    margin: 0;
    height: calc(100vh - 80px);
    overflow-y: scroll;
    overflow-x: hidden;
}

.resume {
    width: 790px;
}

.x-button {
    position: absolute;
    right: 25px;
    top: 15px;
    cursor: pointer;
    transition: top 0.1s;
}

.x-button:hover {
    top: 17px;
}

/* Projects */

.project-container-container {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 80vw;
}

.project-container-container i {
    cursor: pointer;
    color: black;
    transition: color 0.5s;
}

.project-container-container i:hover {
    color: grey;
    transition: color 0.5s;
}

.project-container {
    height: 65vh;
    min-height: 350px;
    width: 62vw;
    margin: 30px;
    overflow: hidden;
}

.project-slider {
    margin-left: 0;
    transition: margin-left 0.5s linear;
    position: relative;
    width: 320vw;
}

.project {
    background-image: url('http://placecorgi.com/700/500');
    background-size: cover;
    height: 65vh;
    min-height: 350px;
    width: 62vw;
    display: inline-block;
}

.project-1 {
    background-image: url('../assets/images/ramenrevolt.png');
}

.project-2 {
    background-image: url('../assets/images/Memorial Day 4x6.png');
}

.project-nav {
    display: flex;
    width: 150px;
    justify-content: space-around;
    align-items: center;
    margin: auto;
}

.project-nav-button {
    width: 15px;
    height: 15px;
    border: 2px solid black;
    border-radius: 15px;
    cursor: pointer;
    background-color: white;
    transition: background-color 0.5s;
}

.project-nav-button:hover {
    background-color: rgb(0, 102, 153);
}

.project-nav-button.active {
    background-color: black;
}

.project-overlay {
    width: 100%;
    height: 100%;
    background: rgba(255, 255, 255, 0.7);
    transition: background 0.5s linear;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.project-overlay p {
    font-size: 20px;
    font-weight: 700;
    padding-bottom: 20px;
}

.project-overlay div a {
    margin: 20px;
}

.project:hover .project-overlay {
    opacity: 1;
    visibility: visible;
    background: rgba(255, 255, 255, 0.9);
}

/* Contact */

#contact {
    background-color: rgba(255, 255, 255, 1);
    padding-top: 0;
}

.contact-box {
    width: 100vw;
    height: 100vh;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
}

.contact-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.contact-container-overlay {
    opacity: 50%;
    background-size: cover;
    background-image: url('../assets/images/llama.jpg');
    width: 100%;
    height: calc(100% + 75px);
    position: fixed;
    top: 0;
    right: 0;
    z-index: -3;
}

.contact-container-overlay.active {
    z-index: -1;
}

.profile-description {
    margin: 70px 20px;
    word-break: break-all;
}

.up-arrow {
    position: relative;
    cursor: pointer;
    z-index: 1;
    width: 54px;
    height: 54px;
}

.up-arrow a {
    position: absolute;
    top: 0px;
    transition: top 0.10s linear;
}

.up-arrow a:hover {
    top: -10px;
    transition: top 0.10s linear;
}

.profile-description p {
    margin: 25px;
    text-align: center;
    font-size: 20px;
}

@media (max-width: 950px) {

    h1 {
        font-size: 60px;
        text-align: center;
    }

    .point-nav {
        left: 40px;
    }
}

@media (max-width: 680px) {
    section {
        padding-top: 0;
    }

    .main-nav > a {
        display: none;
    }

    .nav-buttons {
        display: flex;
        justify-content: space-around;
        width: 100%;
    }

    .point-nav {
        display: none;
    }

    #main-banner {
        margin-top: 75px;
    }

    .main-description {
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: center;

    }

    #experience {
        align-items: flex-start;
    }

    .experience {
        width: 100vw;
    }

    .experience-circles {
        display: block;
    }

    .circle {
        display: inline-block;
        border-radius: 0px;
        width: 50%;
        height: auto;
        min-height: 0px;
        max-height: none;
        min-width: none;
        max-width: none;
        vertical-align: top;
    }

    .circle-overlay {
        padding: 15px;
    }

    .experience-content {
        margin: 0;
        border: 0px;
        padding: 25px;
        height: auto;
    }

    .experience-content canvas {
        width: 90vw !important;
    }

    .mobile-disappear {
        display: none;
    }

    .project-container-container {
        width: 100vw;
    }

    .project-container {
        height: auto;
        width: 100%;
        margin: 0;
    }

    .project-slider {
        width: 100%;

    }

    .project {
        width: 100%;
    }
}

